--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,6 +7,7 @@
         <title>Sign-Up</title>
         <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
         <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
         <style>
             .container{
                 max-width: 100%;
@@ -37,10 +38,14 @@
                     <a class="nav-link" th:href="@{/sign-up}">가입</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/notifications}">알림</a>
+                    <a class="nav-link" th:href="@{/notifications}">
+                        <i class="fa fa-bell-o" aria-hidden="true"></i>
+                    </a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link btn btn-outline-primary" th:href="@{/notifications}">스터디 개설</a>
+                    <a class="nav-link btn btn-outline-primary" th:href="@{/notifications}">
+                       <i class="fa fa-plus" aria-hidden="true"></i> 스터기 개설
+                    </a>
                 </li>
                 <li class="nav-item-dropdown" sec:authorize="isAuthenticated()">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
