--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,6 +8,9 @@
         <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
         <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+        <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="node_modules/jdenticon/dist/jdenticon.min.js"></script>
         <style>
             .container{
                 max-width: 100%;
@@ -50,7 +53,11 @@
                 <li class="nav-item-dropdown" sec:authorize="isAuthenticated()">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">프로필
-                        <!--                    <svg th:if="${#strings.isEmpty(account?.profile?.profileImage)}" data-jdenticon-value="user127" th:data-jdenticon-value="${#authentication.name}" width="24"></svg>-->
+                            <svg th:if="${#strings.isEmpty(account?.profile?.profileImage)}"
+                                 data-jdenticon-value="user127"
+                                 th:data-jdenticon-value="${#authentication.name}"
+                                 width="24" height="24"
+                                 class="rounded border bg-light"></svg>
                     </a>
                     <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
                         <h6 class="dropdown-header">
