--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,10 @@
 <body class="bg-light">
 
 <nav th:replace="fragments.html :: main-nav"></nav>
+<div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
+    가입을 완료하려면 <a th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a> 하세요.
+</div>
+
 
 <div class="container">
     <div class="py-5 text-center">
