--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,7 +53,7 @@
                 <li class="nav-item-dropdown" sec:authorize="isAuthenticated()">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">프로필
-                            <svg th:if="${#strings.isEmpty(account?.profile?.profileImage)}"
+                            <svg
                                  data-jdenticon-value="user127"
                                  th:data-jdenticon-value="${#authentication.name}"
                                  width="24" height="24"
