--- a/src/main/resources/templates/account/checked-email.html
+++ b/src/main/resources/templates/account/checked-email.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head"></head>
 
 <body class="bg-light">
 
 <nav th:replace="fragments.html :: main-nav"></nav>
 
-    <div class="py-5 text-center" sec:authorize="isAuthenticated()" th:if="${error}" >
-        <p class="lead">이메일을 보냈으니 계정 인증 이메일을 확인하세요</p>
-        <div class="alert alert-danger" role="alert">
-            <a th:href="@{/resend-email(name=${#authentication.name})}">이메일 다시보내기</a>
-        </div>
-    </div>
 
-
-
-<div class="py-5 text-center" th:if="${error}" sec:authorize="!isAuthenticated()">
+<div class="py-5 text-center" th:if="${error}" >
         <p class="lead">이메일 확인</p>
         <div class="alert alert-danger" role="alert">
             이메일 확인 링크가 정확하지 않습니다.
