--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
 <nav th:replace="fragments.html :: main-nav"></nav>
 <div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
-    가입을 완료하려면 <a th:href="@{/check-email-token}" class="alert-link">계정 인증 이메일을 확인</a> 하세요.
+    가입을 완료하려면 <a th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a> 하세요.
 </div>
 
 
