--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -11,6 +11,13 @@
 
         </div>
         <div class="col-8">
+            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+                <span th:text="${message}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+
+                </button>
+            </div>
             <div class="row">
                 <h2 class="col-sm-12" th:text="${account.nickname}">ljseokd</h2>
             </div>
