--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -87,15 +87,15 @@
 
     <div th:fragment="study-settings-menu (currentMenu)" class="list-group">
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
-           href="#" th:href="@{'/study/' + ${study.path} + '/settings/description'}">소개</a>
+           href="#" >소개</a>
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-           href="#" th:href="@{'/study/' + ${study.path} + '/settings/banner'}">배너 이미지</a>
+           href="#" >배너 이미지</a>
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
-           href="#" th:href="@{'/study/' + ${study.path} + '/settings/tags'}">스터디 주제</a>
+           href="#" >스터디 주제</a>
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
-           href="#" th:href="@{'/study/' + ${study.path} + '/settings/zones'}">활동 지역</a>
+           href="#" >활동 지역</a>
         <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'study'}? active"
-           href="#" th:href="@{'/study/' + ${study.path} + '/settings/study'}">스터디</a>
+           href="#" >스터디</a>
     </div>
 
     <script type="application/javascript" th:fragment="form-validation">
