--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -90,16 +90,18 @@
     </footer>
     settings-menu(currentMenu='profile')
     <div th:fragment="study-settings-menu (currentMenu)" class="list-group">
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
-           href="#" th:href="@{/settings/description}">소개</a>
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-           href="#" th:href="@{/settings/banner}">배너 이미지</a>
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
-           href="#" th:href="@{/settings/tags}">스터디 주제</a>
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
-           href="#" th:href="@{/settings/zones}">활동 지역</a>
-        <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'study'}? active"
-           href="#" th:href="@{/settings/study}">스터디</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active"
+           href="#" th:href="@{/settings/profile}">프로필</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active"
+           href="#" th:href="@{/settings/password}">패스워드</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'alam'}? active"
+           href="#" th:href="@{/settings/alam}">알림</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'favorite'}? active"
+           href="#" th:href="@{/settings/favorite}">관심 주제</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'location'}? active"
+           href="#" th:href="@{/settings/location}">활동 지역</a>
+        <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active"
+           href="#" th:href="@{/settings/account}">계정</a>
     </div>
 
     <script type="application/javascript" th:fragment="form-validation">
