관심 주제 등록 뷰

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,15 +5,20 @@
     <head th:fragment="head">
         <meta charset="UTF-8">
         <title>Sign-Up</title>
-        <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
         <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
         <script src="/node_modules/jquery/dist/jquery.min.js"></script>
         <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
         <style>
             .container{
                 max-width: 100%;
+            }
+            .tagify-outside{
+                border: 0;
+                padding: 0;
+                margin: 0;
             }
         </style>
     </head>
@@ -70,7 +75,7 @@
                         <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">프로필</a>
                         <a class="dropdown-item" href="#">스터디</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdwon-item" th:href="@{'/settings/prifile'}">설정</a>
+                        <a class="dropdown-item" th:href="@{'/settings/profile'}">설정</a>
                         <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
                             <button class="dropdown-item" type="submit">로그아웃</button>
                         </form>
@@ -96,8 +101,8 @@
            href="#" th:href="@{/settings/password}">패스워드</a>
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active"
            href="#" th:href="@{/settings/notifications}">알림</a>
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'keywords'}? active"
-           href="#" th:href="@{/settings/keywords}">관심 주제</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
+           href="#" th:href="@{/settings/tags}">관심 주제</a>
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'location'}? active"
            href="#" th:href="@{/settings/location}">활동 지역</a>
         <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active"
