--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -49,7 +49,7 @@
 
                     <div class="form-group">
                         <button class="btn btn-outline-primary " type="submit"
-                                aria-describedby="submitHelp"패스워드 변경하기</button>
+                                aria-describedby="submitHelp">패스워드 변경하기</button>
                     </div>
                 </form>
             </div>
