--- a/src/main/resources/templates/settings/tags.html
+++ b/src/main/resources/templates/settings/tags.html
@@ -19,6 +19,7 @@
                         참여하고 싶은 스터디 주제를 입력해 주세요. 해당 주제의 스터디가 생기면 알림을 받을 수 있습니다.
                         태그를 입력하고 콤마(,)또는 엔터를 입력하세요
                     </div>
+                    <div id="whiteList" th:text="${whiteList}" hidden></div>
                     <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags, ',')}"
                            class="tagify-outside" aria-describedby="tagHelp">
                 </div>
@@ -38,12 +39,12 @@
 </script>
 <script type="application/javascript">
     $(function (){
-        function tagRequest(rul, tagTitle){
+        function tagRequest(url, tagTitle){
             $.ajax({
                dataType: "json",
                autocomplete: {
                    enabled: true,
-                   rightKey: true
+                   rightKey: true,
                },
                 contentType: "application/json; charset=utf-8",
                 method: "POST",
@@ -55,15 +56,16 @@
         }
 
         function onAdd(e){
-            tagRequest("/add", e.detail.data.value);
+            tagRequest("/add", e.detail.value.data.value);
         }
         function onRemove(e){
-            tagRequest("/remove", e.detail.data.value);
+            tagRequest("/remove", e.detail.value.data.value);
         }
         var tagInput = document.querySelector("#tags");
 
         var tagify = new Tagify(tagInput, {
             pattern: /^.{0,20}$/,
+            whiteList: JSON.parse(document.querySelector("#whiteList").textContent),
             dropdown: {
                 enabled: 1,
             }
