--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -229,6 +229,22 @@
             </a>
         </nav>
     </div>
+    <div th:fragment="study-settings-menu (currentMenu)" class="list-group">
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/description'}">소개</a>
+
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/image'}">배너 이미지</a>
+
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/tags'}">스터디 주제</a>
+
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/zones'}">활동 지역</a>
+
+        <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'study'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/study'}">스터디</a>
+    </div>
 
     <div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
         <ul class="list-unstyled col-10">
@@ -242,6 +258,25 @@
                 <span th:text="${member.bio}"></span>
             </div>
         </ul>
+    </div>
+    <div th:fragment="editor-script">
+        <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
+        <script>
+            $(function (){
+                $("#fullDescription").summernote({
+                    fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Nato Sans KR', 'Merriweather'],
+                    placeholder: '스터디의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 스터디원 등 스터디에 대해 자세히 적어 주세요.',
+                    tabSize: 2,
+                    height:300
+                });
+            });
 
+        </script>
+    </div>
+    <div th:fragment="message" th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+        <span th:text="${message}">완료</span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
     </div>
 </html>
