--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -233,8 +233,8 @@
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
            th:href="@{'/study/' + ${study.path} + '/settings/description'}">소개</a>
 
-        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-           th:href="@{'/study/' + ${study.path} + '/settings/image'}">배너 이미지</a>
+        <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'banner'}? active"
+           th:href="@{'/study/' + ${study.path} + '/settings/banner'}">배너 이미지</a>
 
         <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
            th:href="@{'/study/' + ${study.path} + '/settings/tags'}">스터디 주제</a>
